src/objects/Commitment_Value__c.object
<CustomObject>
    <fields>
        <fullName>commitment_expiry_days_number__c</fullName>
        <label>Expiry days</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>commitment_id__c</fullName>
        <label>Commitment Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>commitment_product_name__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>commitment_stay_days_number__c</fullName>
        <label>Stay days</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quote_type__c</fullName>
        <label>Quote type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>COTIZADOR</fullName>
                </value>
                <value>
                    <fullName>Tarifario</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>COTIZA Beta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>web_product_code__c</fullName>
        <label>Web product code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>pricing_model_id__c</fullName>
        <label>Pricing model</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>commitment_unit_type__c</fullName>
        <label>unit type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Commitment Value</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>quote_type__c</columns>
        <columns>pricing_model_id__c</columns>
        <columns>commitment_id__c</columns>
        <columns>commitment_product_name__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>commitment_expiry_days_number__c</columns>
        <columns>commitment_stay_days_number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CV-{0000000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commitment Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>